[package]
name = "markdown-blob-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.88.0"
aws-types = "1.3.7"
axum = "0.8.4"
dotenv = "0.15.0"
jwt-simple = "0.12.12"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-rustls", "mysql" ] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
